--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -46,15 +46,32 @@
     margin-left: 3px;
 }
 
+@media (min-width: 320px) {
+    .footer {
+        font-size: 12px;
+        line-height: 1.25;
+        margin-top: 600px;
+    }
+}
 @media (min-width: 768px) {
     .footer {
         font-size: 12px;
         line-height: 1.25;
-        width: 100vw;
-        height: 56px;
+        margin-top: 774px;
+    }
+}
+@media (min-width: 1280px) {
+    .footer {
+        font-size: 12px;
+        line-height: 1.25;
+        margin-top: 309px;
     }
 
     .heart {
         margin: 0 7px;
+        fill: #000000;
     }
+}
+.gap {
+    margin-right: 5px;
 }
