--- a/src/components/Hardcore/Hardcore.module.css
+++ b/src/components/Hardcore/Hardcore.module.css
@@ -10,8 +10,8 @@ figure:focus {
     transform: scale(1.03);
     /* box-shadow: 4px -4px 16px 2px rgb(255, 13, 191); */
     box-shadow: 4px -4px 16px 2px rgb(255, 110, 13);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.6, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(1, 0, 0.2, 1);
 }
 
 .snip1344 {
@@ -27,6 +27,8 @@ figure:focus {
     text-align: center;
     line-height: 1.4em;
     background-color: #f76308;
+    cursor: pointer;
+    opacity: 1;
 }
 .snip1344 * {
     -webkit-box-sizing: border-box;
@@ -51,7 +53,7 @@ figure:focus {
     top: 50%;
 }
 .snip1344 .profile {
-    border-radius: 50%;
+    border-radius: 100%;
     position: absolute;
     bottom: 50%;
     left: 50%;
@@ -61,7 +63,6 @@ figure:focus {
     opacity: 1;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
     border: 2px solid rgba(255, 255, 255, 0.5);
-    -webkit-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
 }
 .snip1344 h3 {
