--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -33,6 +33,9 @@
     }
 }
 .avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
     margin-right: 15px;
 }
 @media screen and (min-width: 768px) {
