--- a/src/components/Hardcore/Hardcore.module.css
+++ b/src/components/Hardcore/Hardcore.module.css
@@ -8,7 +8,6 @@ figure {
 figure:hover,
 figure:focus {
     transform: scale(1.03);
-    /* box-shadow: 4px -4px 16px 2px rgb(255, 13, 191); */
     box-shadow: 4px -4px 16px 2px rgb(255, 110, 13);
     transition: transform 250ms cubic-bezier(0.6, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(1, 0, 0.2, 1);
@@ -29,20 +28,17 @@ figure:focus {
     background-color: #f76308;
     cursor: pointer;
     opacity: 1;
+    border-radius: 20px;
 }
 .snip1344 * {
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-transition: all 0.25s ease;
     transition: all 0.25s ease;
 }
 .snip1344 .background {
     width: 100%;
     vertical-align: top;
     opacity: 0.2;
-    -webkit-filter: grayscale(100%) blur(10px);
     filter: grayscale(100%) blur(10px);
-    -webkit-transition: all 2s ease;
     transition: all 2s ease;
 }
 .snip1344 figcaption {
@@ -89,16 +85,13 @@ figure:focus {
 }
 .snip1344 i:hover {
     opacity: 1;
-    -webkit-transition: all 0.35s ease;
     transition: all 0.35s ease;
 }
 .snip1344:hover .background,
 .snip1344.hover .background {
-    -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
 
-/* Modal */
 .modal {
     position: fixed;
     top: 50%;
@@ -111,8 +104,6 @@ figure:focus {
 
     border-radius: 0.3125rem;
     box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.5);
-
-    /* background: rgb(255, 13, 191); */
     background: rgb(255, 110, 13);
     animation: pulse 1.25s cubic-bezier(0.66, 0, 0, 1) infinite;
 
@@ -141,10 +132,6 @@ figure:focus {
     padding: 25px;
 
     overflow: auto;
-
-    /* @include for-size(desktop) {
-    overflow: hidden;
-  } */
 
     @media (max-height: 950px) {
         overflow: auto;
