--- a/src/components/CategoriesReport/CategoriesReport.module.css
+++ b/src/components/CategoriesReport/CategoriesReport.module.css
@@ -54,10 +54,7 @@
     margin-bottom: 40px;
     flex-basis: calc((100% - 10px * 3) / 3);
     border-bottom: 1px solid var(--ratio-line);
-
 }
-
-
 
 .cost {
     margin-top: 0;
@@ -71,13 +68,15 @@
 
 .icon {
     fill: #071f41;
-    background-image: radial-gradient(75% 65% at 50% 50%,
-            #f5f6fb 15%,
-            #f5f6fb 5%,
-            #f5f6fb 40%,
-            #f5f6fb 0,
-            #f5f6fb 65%,
-            #fff 0);
+    background-image: radial-gradient(
+        75% 65% at 50% 50%,
+        #f5f6fb 15%,
+        #f5f6fb 5%,
+        #f5f6fb 40%,
+        #f5f6fb 0,
+        #f5f6fb 65%,
+        #fff 0
+    );
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -85,13 +84,15 @@
 .icon:hover,
 .icon:focus {
     fill: var(--accent-color);
-    background-image: radial-gradient(75% 65% at 50% 50%,
-            #ffdac0 15%,
-            #ffdac0 5%,
-            #ffdac0 40%,
-            #ffdac0 0,
-            #ffdac0 65%,
-            #fff 0);
+    background-image: radial-gradient(
+        75% 65% at 50% 50%,
+        #ffdac0 15%,
+        #ffdac0 5%,
+        #ffdac0 40%,
+        #ffdac0 0,
+        #ffdac0 65%,
+        #fff 0
+    );
     cursor: pointer;
 }
 
@@ -105,8 +106,6 @@
     color: var(----main-txt-color);
 }
 
-
-
 @media screen and (min-width: 768px) {
     .categoriesCosts {
         margin-top: 30px;
@@ -117,7 +116,6 @@
         background-color: var(--select-bg);
         box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
         border-radius: 30px;
-
     }
 
     .list {
@@ -125,7 +123,7 @@
     }
 
     .item {
-         margin-left: 15px;
+        margin-left: 15px;
         flex-basis: calc((100% - 15px * 6) / 6);
         border-bottom: none;
     }
