--- a/src/components/CategoriesReport/CategoriesReport.module.css
+++ b/src/components/CategoriesReport/CategoriesReport.module.css
@@ -135,3 +135,17 @@
         width: 1060px;
     }
 }
+
+.error {
+    padding: 30px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    color: var(--black-text-color);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+}
