--- a/src/components/Charts/Charts.module.css
+++ b/src/components/Charts/Charts.module.css
@@ -1,5 +1,6 @@
-.diagram {
+.chart {
     height: 422px;
+    width: 1060px;
     margin-top: 30px;
     padding: 20px 20px 30px 30px;
     background-color: var(--select-bg);
@@ -7,6 +8,6 @@
     border-radius: 30px;
 }
 
-.chart {
+.bar {
     width: 1060px;
 }
