--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -1,6 +1,6 @@
 .summaryWrap {
     width: 230px;
-    height: 278px;
+    min-height: 278px;
     margin-top: 48px;
     margin-left: 20px;
     border-radius: 20px 20px 20px 0;
