--- a/src/components/Hardcore/Hardcore.module.css
+++ b/src/components/Hardcore/Hardcore.module.css
@@ -16,8 +16,6 @@ figure:focus {
 .snip1344 {
     font-family: 'Open Sans', Arial, sans-serif;
     position: relative;
-    overflow: hidden;
-    margin: 15px;
     min-width: 230px;
     max-width: 214px;
     height: 300px;
@@ -26,9 +24,32 @@ figure:focus {
     text-align: center;
     line-height: 1.4em;
     background-color: #f76308;
-    cursor: pointer;
-    opacity: 1;
     border-radius: 20px;
+    margin: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.snip1344:before,
+.snip1344:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background: #fff;
+    transition: 0.5s;
+    z-index: -1;
+}
+
+.snip1344:hover:before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.snip1344:hover:after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
 .snip1344 * {
     box-sizing: border-box;
@@ -49,14 +70,13 @@ figure:focus {
     top: 50%;
 }
 .snip1344 .profile {
-    border-radius: 100%;
+    border-radius: 15%;
     position: absolute;
     bottom: 50%;
     left: 50%;
     object-fit: cover;
-    width: 100px;
-    height: 100px;
-    opacity: 1;
+    width: 140px;
+    height: 140px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
     border: 2px solid rgba(255, 255, 255, 0.5);
     transform: translate(-50%, 0%);
@@ -78,6 +98,7 @@ figure:focus {
     font-size: 32px;
     color: #000000;
     text-align: center;
+    cursor: pointer;
     opacity: 0.65;
 }
 .snip1344 a {
@@ -96,12 +117,9 @@ figure:focus {
     position: fixed;
     top: 50%;
     left: 50%;
-
     width: 0;
     height: 2px;
-
     overflow: hidden;
-
     border-radius: 0.3125rem;
     box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.5);
     background: rgb(255, 110, 13);
@@ -130,9 +148,7 @@ figure:focus {
     margin: 1px;
     height: 99.8%;
     padding: 25px;
-
     overflow: auto;
-
     @media (max-height: 950px) {
         overflow: auto;
     }
@@ -180,6 +196,5 @@ figure:focus {
 
 .close:before,
 .close:after {
-    /* background-color: rgb(255, 13, 191); */
     background-color: rgb(255, 110, 13);
 }
