add active style

--- a/src/components/Buttons/CostsAndIncomesButtons/CostsAndIncomesButton.module.css
+++ b/src/components/Buttons/CostsAndIncomesButtons/CostsAndIncomesButton.module.css
@@ -31,4 +31,11 @@
         color: var(--accent-color);
         background-color: #fafbfd;
     }
+
+    .btnActive {
+        color: #ff751d;
+    }
+    .btnActive:active {
+        color: #ff751d;
+    }
 }
