--- a/src/_pages/MainPage/MainPage.module.css
+++ b/src/_pages/MainPage/MainPage.module.css
@@ -11,7 +11,8 @@
 .btnMobileWrapper {
     position: fixed;
     display: flex;
-
+    justify-content: center;
+    align-items: center;
     bottom: 0;
 }
 .transactionTabletDesktopWrapper {
