--- a/src/components/CalendarForm/CalendarForm.module.css
+++ b/src/components/CalendarForm/CalendarForm.module.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 40px;
+    margin-right: auto;
+    margin-left: auto;
     font-weight: 900;
     font-size: 12px;
     line-height: 1.167;
