--- a/src/components/TransactionListMobile/TransactionList.module.css
+++ b/src/components/TransactionListMobile/TransactionList.module.css
@@ -1,6 +1,9 @@
 .listWrapper {
+    max-width: 400px;
     margin-top: 82px;
     margin-bottom: 10px;
+    margin-right: auto;
+    margin-left: auto;
     padding-left: 19px;
     padding-right: 19px;
 }
