--- a/src/components/CategoriesReport/CategoriesReport.module.css
+++ b/src/components/CategoriesReport/CategoriesReport.module.css
@@ -149,3 +149,46 @@
     letter-spacing: 0.02em;
     text-transform: uppercase;
 }
+
+.chart {
+    height: 422px;
+    width: 1060px;
+    margin-top: 30px;
+    padding: 20px 20px 30px 30px;
+    background-color: var(--select-bg);
+    box-shadow: 0px 10px 60px rgb(170 178 197 / 20%);
+    border-radius: 30px;
+    background-color: yellow;
+}
+
+.bar {
+    width: 1060px;
+}
+
+@media screen and (min-width: 320px) {
+    .chartContainer {
+        border: 2px solid tomato;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 51px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .chartContainer {
+        border: 2px solid tomato;
+        padding: 19px;
+        margin-bottom: 76px;
+        background: #ffffff;
+        box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+        border-radius: 30px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .chartContainer {
+        padding-left: 150px;
+        padding-right: 150px;
+        margin-bottom: 79px;
+    }
+}
