--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -47,6 +47,10 @@
     margin-left: 3px;
 }
 
+.svg {
+    position: relative;
+}
+
 @media (min-width: 320px) {
     .footer {
         font-size: 12px;
@@ -80,9 +84,9 @@
         width: 100px;
         height: 40px;
         position: absolute;
-        left: 51%;
-        bottom: 11px;
-        transform: translate(-50%, 7px) translateZ(0);
+        /* left: 51%; */
+        bottom: 0px;
+        transform: translate(-7%, 7px) translateZ(0);
         fill: none;
         stroke: black;
         stroke-linecap: round;
@@ -99,10 +103,6 @@
     }
 }
 @media (min-width: 768px) {
-    p a svg {
-        left: 69%;
-        bottom: 12px;
-    }
     p a:link:hover {
         --spacing: 4px;
         --stroke: black;
@@ -111,10 +111,6 @@
     }
 }
 @media (min-width: 1280px) {
-    p a svg {
-        left: 60%;
-        bottom: 11px;
-    }
     p a:link:hover {
         --spacing: 4px;
         --stroke: black;
